Fix display financer version mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,10 @@ li {
     padding-top: 60px;
 }
 
+.financer-mob {
+    display: none;
+}
+
 .pourquoi {
     background: url('../assets/images/background/desk-bandeau-home-pourquoi.jpg') bottom / contain no-repeat;
     background-color: #FEFAE5;
